RESOLVED FIXED291640
REGRESSION (288616@main): [ Sequoia wk2 x86_64 ] imported/w3c/web-platform-tests/webrtc/RTCPeerConnection-GC.https.html is a consistent failure
https://bugs.webkit.org/show_bug.cgi?id=291640
Summary REGRESSION (288616@main): [ Sequoia wk2 x86_64 ] imported/w3c/web-platform-te...
Karl Rackler
Reported 2025-04-16 11:12:49 PDT
Description: imported/w3c/web-platform-tests/webrtc/RTCPeerConnection-GC.https.html The commit 288616@main changed HTMLMediaElement.cpp which seems to have caused the test to be unable to collect an HTMLMediaElement playing a video track. This issue can be bisected to 288616@main using the command: run-webkit-tests --release --no-retry --force --iterations=1 imported/w3c/web-platform-tests/webrtc/RTCPeerConnection-GC.https.html History: https://results.webkit.org/?suite=layout-tests&test=imported%2Fw3c%2Fweb-platform-tests%2Fwebrtc%2FRTCPeerConnection-GC.https.html&platform=mac&version_name=Sequoia&recent=false&architecture=x86_64 Test Run: https://build.webkit.org/#/builders/1228/builds/1234 layout-test Full logs: 00:07:06.871 43090 [71643/82758] imported/w3c/web-platform-tests/webrtc/RTCPeerConnection-GC.https.html failed unexpectedly (text diff) 00:07:06.871 43090 worker/8 imported/w3c/web-platform-tests/webrtc/RTCPeerConnection-GC.https.html failed: 00:07:06.871 43090 worker/8 text diff 00:40:20.534 43090 imported/w3c/web-platform-tests/webrtc/RTCPeerConnection-GC.https.html took 135.3 seconds Diff: @@ -1,4 +1,6 @@ -PASS GC does not collect a peer connection pipe rendering to a video element -PASS GC does not collect an HTMLMediaElement playing a video track +Harness Error (TIMEOUT), message = null +TIMEOUT GC does not collect a peer connection pipe rendering to a video element Test timed out +NOTRUN GC does not collect an HTMLMediaElement playing a video track +
Attachments
Radar WebKit Bug Importer
Comment 1 2025-04-16 11:14:40 PDT
EWS
Comment 2 2025-04-16 11:29:09 PDT
Test gardening commit 293763@main (1e716de853f7): <https://commits.webkit.org/293763@main> Reviewed commits have been landed. Closing PR #44159 and removing active labels.
Brent Fulgham
Comment 3 2025-04-28 10:26:15 PDT
This issue is now tracked under: <rdar://150207662>
youenn fablet
Comment 4 2025-04-30 02:37:59 PDT
EWS
Comment 5 2025-04-30 06:48:45 PDT
Committed 294333@main (6d779bebb143): <https://commits.webkit.org/294333@main> Reviewed commits have been landed. Closing PR #44736 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.