REGRESSION (288616@main): [ Sequoia wk2 x86_64 ] imported/w3c/web-platform-tests/webrtc/RTCPeerConnection-GC.https.html is a consistent failure rdar://149401905 https://bugs.webkit.org/show_bug.cgi?id=291640

Reviewed by Jean-Yves Avenard.

We reenable the usage code path for x86 until we are sure all x86 devices support low resolutions without it.

* Source/ThirdParty/libwebrtc/Source/webrtc/webkit_sdk/objc/components/video_codec/RTCVideoEncoderH264.mm:
(-[RTCVideoEncoderH264 resetCompressionSessionWithPixelFormat:]):

Canonical link: https://commits.webkit.org/294333@main